<resources>
    <string name="app_name">Passport Seva</string>
    <string name="Applying_for">Select your passport type</string>
    <string-array name="passport_type">
        <item>----</item>
        <item>Fresh Passport</item>
        <item>Fresh + Tatkal Passport </item>
        <item>Re-issue Passport</item>
        <item>Re-issue + Tatkal Passport</item>
    </string-array>
    <string-array name="gender">
        <item>----</item>
        <item>Male</item>
        <item>Female</item>
        <item>Trangender</item>
    </string-array>
    <string-array name="marital_status">
        <item>----</item>
        <item>Single</item>
        <item>Married</item>
        <item>Divorced</item>
        <item>Widow/Widower</item>
        <item>Separated</item>
    </string-array>
    <string-array name="employment">
        <item>----</item>
        <item>Government</item>
        <item>Homemaker</item>
        <item>Private</item>
        <item>PSU</item>
        <item>Retired Private Services</item>
        <item>Owners,Partners and Directors of Companies which are members od CIII, FICCI, ASSOCHAM</item>
        <item>Not Employed</item>
        <item>Other</item>
    </string-array>
    <string-array name="education">
        <item>----</item>
        <item>7th pass or less</item>
        <item>Between 8th and 9th standard</item>
        <item>10th pass and above</item>
        <item>Graduation and above</item>
    </string-array>
    <string-array name="citizenship">
        <item>----</item>
        <item>Birth</item>
        <item>Descent</item>
        <item>Registration/Neutralization</item>
    </string-array>
    <string name="info">I, the holder of above mentioned Aadhaar Number , hereby give my consent to Passport Seva to obtain my Aadhaar Number,
                        Name and Fingerprint/Iris for authentication with UIDAI. I have no objection using my identity and biometric information
                        for validation with Aadhaar (CIDR) database only for the purpose of authentication.</string>
    <string name="emergency">Emergency Contact Details Please fill up
                             below details of your family or relative ones.
                             It will be use for emergency.</string>
    <string name="non_ecr">YOU SHOULD HAVE ANY ONE OF THE FOLLOWING DOCUMENTS AS A NON ECR PROOF FOR PASSPORT APPLICATION :</string>
    <string name="non_ecr1">All Persons Having Educational Qualifications Of Matriculation And Above</string>
    <string name="non_ecr2">Matriculation Or Higher Educational Pass Certificate</string>
    <string name="non_ecr3">All Persons Above The Age Of 50 Years</string>
    <string name="non_ecr4">Birth Certificate Issued By The Municipal Authority Or Any Office Authorized To Issue Birth And Death Certificate By The Registrar Of Births and Deaths OR</string>
    <string name="non_ecr5">School Leaving Certificate / Secondary School Leaving Certificate/ Certificate Of Recognized Boards From The School Last Attended By The Applicant Or Any Other Recognized Educational Institution</string>
    <string name="non_ecr6">All Children Up To The Age Of 18 Years. (For Re-Issue Of Passport, After They Attain The Age Of 18 Years, Documents To Prove Their Non-ECR Category Has To Be Submitted, Else ECR Stamping Will Be Done)</string>
    <string name="non_ecr7">Birth Certificate Issued By Municipal Authority Or Any Office Authorized To Issue Birth Certificate By Registrar Of Births And Deaths Income-Tax Payers (Including Agricultural Income-Tax Payees) In Their Individual Capacity, Their Spouses And Dependent Children Below The Age 18 Years</string>
    <string name="non_ecr8">Proof Of Assessment Of Income Tax And Actual Payment Of Income Tax For Last One Year OR</string>
    <string name="non_ecr9">Income Tax Return Statement (With Income Tax Being Paid By The Applicant) For Last One Year That Is Stamped By Income Tax Authorities And A Copy Of The PAN Card</string>
    <string name="non_ecr10">Note: I) Proof Of Payment Of Advance Tax Is Not Sufficient. You Need To Submit Additional Documents As Specified Above.
                            Ii) Applicants Submitting NILL Income Tax Return Statement Are Not Eligible.</string>
    <string name="non_ecr11">An Attested Copy Of Marriage Certificate Issued By The Marriage Registrar Needs To Be Submitted. For Verification, Spouses Name Needs To Be Endorsed In The Applicants Passport.
                            (For Spouses, Certificate Signifying Relation) OR</string>
    <string name="non_ecr12">Birth Certificate Issued By Municipal Authority Or Any Office Authorized To Issue Birth Certificate By Registrar Of Births And Deaths. (For Dependent Children Certificate Signifying Relation) OR</string>
    <string name="non_ecr13"> School Leaving Certificate / Secondary School Leaving Certificate/ Certificate Of Recognized Boards From The School Last Attended By The Applicant Or Any Other Recognized Educational Institution.
                              (For Dependent Children Certificate Signifying Relation)</string>
    <string name="non_ecr14"> Persons Possessing Two Years Diploma From Any Institute Recognized By The National Council For Vocational Training (NCVT) Or State Council Of Vocational Training (SCVT), Or Persons Holding
                            Three Years Diploma/Equivalent Degree From Institutions, Such As Polytechnics Recognized By The Central/State Governments Of India</string>
    <string name="non_ecr15"> Pass Certificate Issued By The Institute</string>
    <string name="non_ecr16"> Nurses Possessing Qualifications Recognized Under The Indian Nursing Council Act. 1947</string>
    <string name="non_ecr17"> Nursing Certificate.</string>
    <string name="non_ecr18"> Have you ever held/hold any Identity Certificate? *</string>
    <string name="non_ecr19"> All Professional Degree Holders , Their Spouses And Dependent Children. Examples Of Professional Degree Holders Are Doctors Holding MBBS
                            Degree Or Equivalent Degree In AYURVED Or HOMEOPATHY, Accredited Journalists, Engineers, Chartered Accountants, Cost Accountants, Lecturers, Teachers, Scientists, Advocates, Etc</string>
    <string name="non_ecr20"> Certificate Of The Professional Degree Held.</string>
    <string name="non_ecr21"> An Attested Copy Of Marriage Certificate Issued By The Marriage Registrar Needs To Be Submitted. For Verification, Spouses Name Needs To Be Endorsed In The
                            Applicants Passport.(For Spouses, Certificate Signifying Relation)</string>
    <string name="non_ecr22"> Birth Certificate Issued By Municipal Authority Or Any Office Authorized To Issue Birth Certificate By Registrar Of Births And Deaths (For Dependent Children Certificate Signifying Relation) OR</string>
    <string name="non_ecr23"> School Leaving Certificate / Secondary School Leaving Certificate/ Certificate Of Recognized Boards From The School Last Attended By The Applicant Or Any Other Recognized Educational Institution (For Dependent Children Certificate Signifying Relation)</string>
    <string name="birth1">YOU SHOULD HAVE ANY ONE OF THE FOLLOWING DOCUMENTS AS A BIRTH PROOF FOR PASSPORT APPLICATION :</string>
    <string name="birth2">Birth Certificate Issued By The Registrar Of Births And Deaths Or The Municipal Corporation Or Any Other Prescribed Authority,Whosoever Has Been Empowered Under The Registration Of Birth And Deaths Act, 1969 To Register The Birth Of A Child Born In India.</string>
    <string name="birth3">Transfer/School Leaving/Matriculation Certificate Issued By The School Last Attended/Recognised Educational Board.</string>
    <string name="birth4">Policy Bond Issued By The Public Life Insurance Corporations/Companies Having The DOB Of The Holder Of The Insurance Policy.</string>
    <string name="birth5">Copy Of An Extract Of The Service Record Of The Applicant (Only In Respect Of Government Servants) Or The Pay Pension Order (In Respect Of Retired Government Servants), Duly Attested/Certified By The Officer/In-Charge Of The Administration Of The Concerned Ministry/Department Of The Applicant.</string>
    <string name="birth6">Aadhaar Card/E-Aadhaar.</string>
    <string name="birth7">Election Photo Identity Card (EPIC) Issued By The Election Commission Of India.</string>
    <string name="birth8">PAN Card Issued By The Income Tax Department.</string>
    <string name="birth9">Driving License Issued By The Transport Department Of Concerned State Government.</string>
    <string name="birth10">A Declaration Given By The Head Of The Orphanage/Child Care Home On Their Official Letter Head Of The Organization Confirming The DOB Of The Applicant.</string>
    <string name="adress1">YOU SHOULD HAVE ANY ONE OF THE FOLLOWING DOCUMENTS AS A PRESENT RESIDENTIAL ADDRESS PROOF FOR PASSPORT APPLICATION :</string>
    <string name="adress2">Water Bill.</string>
    <string name="adress3">Telephone (Landline Or Post Paid Mobile Bill).</string>
    <string name="adress4">Electricity Bill.</string>
    <string name="adress5">Election Commission Photo ID Card.</string>
    <string name="adress6">Proof Of Gas Connection.</string>
    <string name="adress7">Certificate From Employer Of Reputed Companies On Letter Head.</string>
    <string name="adress8">Spouses Passport Copy (First And Last Page Including Family Details Mentioning Applicants Name As Spouse Of The Passport Holder), (Provided The Applicants Present Address Matches The Address Mentioned In The Spouses Passport).</string>
    <string name="adress9">Parents Passport Copy, In Case Of Minors(First And Last Page).</string>
    <string name="adress10">Aadhaar Card.</string>
    <string name="adress12">Photo Passbook Of Running Bank Account (Scheduled Public Sector Banks, Scheduled Private Sector Indian Banks And Regional Rural Banks Only).</string>
    <string name="identity1">Pan Card
    </string>
    <string name="identity2">Aadhar Card</string>
    <string name="identity3">
    Driving Licence
     </string>
    <string name="identity4">
    Voter ID </string>
    <string name="tat">Aadhaar Card</string>
    <string name="tat2">Voter ID</string>
    <string name="tat3">  Employee ID Card Issued by State/Central Govt. or Public Ltd. Company</string>
    <string name="tat4">SC/ST/OBC Certificate</string>
    <string name="tat5">Arms License</string>
    <string name="tat6">Pension Book / Pension Order</string>
    <string name="tat7">Self-Passport</string>
    <string name="tat8">PAN Card</string>
    <string name="tat9">Bank/Kisan/Post Office Passbook</string>
    <string name="tat10">Student ID Card issued by Govt. Recognized Institutions</string>
    <string name="tat11">Driving License</string>
    <string name="tat12">Birth Certificate</string>
    <string name="tat13">Ration Card</string>
</resources>