<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress1"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress2"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress3"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress4"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress5"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress6"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress7"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress8"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress9"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress10"
            />
        <TextView
            android:drawableLeft="@drawable/ic_point"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adress12"
            />

    </LinearLayout>
    </ScrollView>
</LinearLayout>