<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr1"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr1"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr2"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr3"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr4"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr5"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr6"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr7"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr8"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr9"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr10"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr11"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr12"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr13"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr14"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr15"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr16"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr17"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr18"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr19"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr20"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr21"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr22"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr23"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr1"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr1"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr1"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/non_ecr1"
                />

        </LinearLayout>
    </ScrollView>




</LinearLayout>