<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Any five of the documents listed below:"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat"
                />

            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat2"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat3"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat4"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat3"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat5"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat6"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat7"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat8"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat9"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat10"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat11"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat12"
                />
            <TextView
                android:drawableLeft="@drawable/ic_point"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tat13"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>